# sciteproj

./: .gitignore  CMakeLists.txt  COPYING  ChangeLog  INSTALL  Makefile  README  README.translators  TODO  VERSION  sciteproj.1  sciteproj.desktop  sciteproj.xml
graphics/: text-x-cpp.xpm  text-x-h.xpm  text-x-java.xpm  text-x-lua.xpm  text-x-txt.xpm
po/: Makefile  sciteproj.pot  sv.po  sv_SE.po
src/: about.c  about.h  addfiles.c  addfiles.h  clicked_node.c  clicked_node.h  clipboard.c  clipboard.h  create_folder.c  create_folder.h  delete.c  delete.h  dialogs.c  dialogs.h  drag_drop.c  drag_drop.h  error.c  error.h  expand.c  expand.h  file_utils.c  file_utils.h  filelist.c  filelist.h  folder_config.c  folder_config.h  folder_to_xml.c  folder_to_xml.h  graphics.c  graphics.h  gtk3_compat.h  gui.c  gui.h  gui_callbacks.c  gui_callbacks.h  icon.c  icon.h  launch_external.c  launch_external.h  load_folder.c  (+32 more)
src/icons/: Makefile  icons.gresource.xml  sciteproj.xpm
